--- a/templates/pivote-table-main.html.save.1
+++ b/templates/pivote-table-main.html.save.1
@@ -22,14 +22,13 @@
 		<div class="data-filter-fields">	
 		<div class="form-row">
 			<label for="empresa" class="field-label">Empresa:</label>
-			<input type="text" autocomplete="off" name="empresa" class="input-box" id="empresa">
-		</div>
+			<input type="text" autocomplete="off" name="empresa" class="input-box" id="empresa		</div>
 		<div class="form-row">
 			<label for="experiencia" class="field-label">Experiencia:</label>
 			<input type="text" autocomplete="off" name="experiencia"class="input-box" id="experiencia">
 		</div>
 		<div class="form-row">
-			<label for="num-telefono" class="field-label">Teléfono:</label>
+			<label for="num-telefono" class="field-label">Número telefónico:</label>
 			<input type="text" autocomplete="off" name="num-telefono" class="input-box" id="num-telefono">
 		</div>
 		<div class="form-row">
@@ -41,7 +40,7 @@
 			<input type="text" autocomplete="off" name="respuesta" class="input-box" id="respuesta">
 		</div>
 		<div class="form-row">
-			<label for="timestamp" class="field-label">Hora:</label>
+			<label for="timestamp" class="field-label">Timestamp:</label>
 			<input type="text" autocomplete="off" name="timestamp"class="input-box" id="timestamp">
 		</div>
 		</div>
